2006-09-18  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Fix building without epiphany plugin dependencies.
    Fixes 356584
    * agent/seahorse-agent-ssh.c: Fix crasher on AMD64 systems
    Fixes 356528.  Patch by Gustavo Carneiro.

2006-09-17  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Fix errors with build epiphany plugin on
    versions of GNOME newer than 2.14.0
    * plugins/epiphany/Makefile.am: Remove comment preventing 
    proper building for some users.
    * configure.in:
    * libcryptui/cryptui.h:
    * m4/epiphany.m4(added):
    * m4/gecko.m4(added):
    * plugins/Makefile.am:
    * plugins/epiphany(added):
    * plugins/epiphany/Makefile.am(added):
    * plugins/epiphany/eel-gconf-extensions.h(added):
    * plugins/epiphany/ephy-debug.h(added):
    * plugins/epiphany/seahorse-extension.c(added):
    * plugins/epiphany/seahorse-extension.h(added):
    * plugins/epiphany/seahorse.c(added):
    * plugins/epiphany/seahorse.ephy-extension.in.in(added):
    * plugins/epiphany/mozilla/Makefile.am(added):
    * plugins/epiphany/mozilla/mozilla-helper.cpp(added):
    * plugins/epiphany/mozilla/mozilla-helper.h(added):
    Initial commit of Epiphany plugin.  Allows encryption of text fields.
    #355386.  Epiphany extension code by Jean-François Rameau(jfr). 


2006-09-16  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in 
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c:
    * src/Makefile.am:
    * src/seahorse-gkeyring-item-properties.c (added):
    * src/seahorse-gkeyring-item-properties.glade (added):
    * src/seahorse-gkeyring-item.c (added):
    * src/seahorse-gkeyring-item.h (added):
    * src/seahorse-gkeyring-operation.c (added):
    * src/seahorse-gkeyring-operation.h (added):
    * src/seahorse-gkeyring-source.c (added):
    * src/seahorse-gkeyring-source.h (added):
    * src/seahorse-key-dialogs.h: