@@ -1,3 +1,8 @@
+2006-09-18  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-gkeyring-source.c: Fix assertion when gnome-keyring
+    doesn't have a default keyring. Fixes #356550
+    
 2006-09-18  Adam Schreiber  <sadam@clemson.edu>
 
     * configure.in: Fix building without epiphany plugin dependencies.
